--- a/EDA/EDA.rmd
+++ b/EDA/EDA.rmd
@@ -11,19 +11,18 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 ```{r pre-processing}
-
-train = read.csv("../data/train.csv", stringsAsFactors = F)
-train = train[,-1] #remove userid
-train_cont = train[, -grep(paste(c("cat","bin"), collapse="|"), names(train))]
-train_cat_bin = train[, c(1,grep(paste(c("cat","bin"), collapse="|"), names(train)))]
+data_path = "C:/Users/tanke/OneDrive/Kaggle/Driver Safety/Data"
+train = read.csv(paste0(data_path, "/train.csv"), stringsAsFactors = F)
+train = train[,-1] 
+#remove userid
+train_cont = train[, -grep(paste(c("cat","bin"), collapse="|"), names(train))] 
+#train data with only numerical features
+train_cat_bin = train[, c(1,grep(paste(c("cat","bin"), collapse="|"), names(train)))] 
+#train data with only binary/categorical features
 
 ```
 
-
-
-#########################################
-##Extract Significant Correlation Pairs##
-#########################################
+###Extract Significant Correlation Pairs
 ```{r correlation pairs}
 
 corr_threshold = 0.15
@@ -47,14 +46,51 @@ for (i in 1:ncol(train_cont)){
 print(sig_corr)
 ```
 
+###Extract Interaction Pairs
+```{r}
+target_correlation = round(cor(train_cont)[1,],3) 
+target_correlation_sorted = sort(target_correlation, decreasing = T) 
+print(target_correlation_sorted)
 
-#########################################
-##Information Value #####################
-#########################################
-
-#To be continued
-```{r information value}
+interact_threshold = mean(target_correlation_sorted[2:6]) #0.0374
+pvalue_threshold = 0.05
+interact_corr = data.frame(Interact_Term = character(), Correlation = double(), P_Value = double(), stringsAsFactors = F)
 
 
+for (i in 2:ncol(train_cont)){
+  for(j in 2:ncol(train_cont)){
+    
+    ctest = cor.test(train_cont[,1], train_cont[,j]*train_cont[,i]) #correlation test between Y and interaction terms
+    individualterm_threshold =  max(target_correlation[i], target_correlation[j]) 
+    #threshold to ensure the interaction term has better correlation than only one componenent term
+    
+    if(ctest$estimate > max(individualterm_threshold, interact_threshold) && ctest$p.value < pvalue_threshold){
+        new_row = data.frame(Interact_Term = paste0(names(train_cont)[i], " X ", names(train_cont)[j]), 
+                             correlation = ctest$estimate, p_value = ctest$p.value, row.names = NULL)
+        interact_corr = rbind(interact_corr, new_row)
+      
+    }
+    
+  }
+}
 
+
+print(interact_corr)
 ```
+
+
+###Information Value 
+```{r information value}
+library(InformationValue)
+IV_table = data.frame(Name = character(), IV = numeric())
+
+for (i in 2:ncol(train_cat_bin)){
+  IV_ = IV(X=factor(train_cat_bin[,i]), Y=train_cat_bin$target)
+  new_row = data.frame(Name = colnames(train_cat_bin)[i], IV_)
+  IV_table = rbind(IV_table, new_row)
+}
+
+print(IV_table[order(IV_table$IV_, decreasing = T),])
+```
+No categorical/binary features have high IV values. (all of them are conidered "not predictive" by the IV table).
+More info about IV can be found [here](http://documentation.statsoft.com/STATISTICAHelp.aspx?path=WeightofEvidence/WeightofEvidenceWoEIntroductoryOverview).
